--- a/src/modules/3dlsPromoSite/components/footer/footer.scss
+++ b/src/modules/3dlsPromoSite/components/footer/footer.scss
@@ -40,13 +40,14 @@ $footer-padding-hor: 80px;
     }
 }
 
-@media only screen and (max-width: 1380px) {
+@media only screen and (max-width: 1480px) {
     .footer-container .power-by {
         justify-content: center;
     }
 
     .footer-container .footer-options {
-        display: none;
+        justify-content: center;
+        flex-wrap: wrap;
     }
 }
 
