--- a/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
+++ b/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
@@ -3,7 +3,7 @@
 $discover-container-margin-top: 0; // 200px;
 $discover-main-padding-top: 80px;
 
-$discover-step-height: 1200px;
+$discover-step-height: 1000px;
 $discover-step-bg-width: 1200px;
 // $discover-step-offset: 300px;
 $discover-step-img-width: 90px;
@@ -139,9 +139,15 @@ $discover-step-img-width: 90px;
   .discover-step {
     padding: 0 12px;
     width: 100%;
+    height: auto;
+
     &::after {
       display: none;
     }
+  }
+
+  .discover-step-main {
+    margin-bottom: 50px;
   }
 
   .discover-container {
