--- a/src/modules/3dlsPromoSite/components/contactUs/contactUs.scss
+++ b/src/modules/3dlsPromoSite/components/contactUs/contactUs.scss
@@ -86,6 +86,7 @@ $contact-item-margin-bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
   }
 
   &--error {
@@ -126,6 +127,10 @@ $contact-item-margin-bottom: 20px;
 @media only screen and (max-width: 1100px) {
   .contact-formula-container {
     width: 100%;
+  }
+
+  .policy-switch .title--sub {
+    font-size: 15px;
   }
 }
 
