--- a/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
+++ b/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
@@ -112,9 +112,9 @@ $discover-step-img-width: 90px;
   }
 }
 @media only screen and (max-width: 1400px) {
-  .discover-container {
-    margin-top: 200px;
-  }
+  // .discover-container {
+  //   margin-top: 200px;
+  // }
 
   .discover-step-content--title {
     font-size: 24px;
@@ -150,9 +150,9 @@ $discover-step-img-width: 90px;
     margin-bottom: 50px;
   }
 
-  .discover-container {
-    margin-top: 250px;
-  }
+  // .discover-container {
+  //   margin-top: 250px;
+  // }
 
   .discover-main--body {
     padding: 0 30px;
