--- a/src/modules/3dlsPromoSite/main.scss
+++ b/src/modules/3dlsPromoSite/main.scss
@@ -19,6 +19,7 @@ $carousel-text-left: 120px;
   position: relative;
   width: 100%;
   height: 100vh;
+  min-height: 1000px;
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -31,6 +32,7 @@ $carousel-text-left: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 
   & img {
     width: 29px;
@@ -110,11 +112,11 @@ $carousel-text-left: 120px;
 }
 
 
-@media only screen and (min-width: 1100px) {
-  // .carousel-container {
-  //   min-height: 900px;
-  // }
-}
+// @media only screen and (min-width: 1100px) {
+//    .carousel-container {
+//     min-height: 900px;
+//    }
+// }
 
 @media only screen and (max-width: 1550px) {
   // .discover-btn {
@@ -177,8 +179,25 @@ $carousel-text-left: 120px;
   }
 }
 
-// @media only screen and (max-device-width: 1366px) {
-//    .carousel-container {
-//      height: 800px;
-//    }
+@media only screen and (max-height: 1000px) {
+  .discover-btn {
+    top: 550px;
+    bottom: inherit;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-height: 1000px) {
+  .discover-btn {
+    top: 810px;
+    bottom: inherit;
+  }
+}
+
+
+
+
+//  @media only screen and (max-device-height: 600px) {
+//   .carousel-container {
+//     height: 800px;
+//   }
 // }
