--- a/src/modules/wef/components/footer/footer.scss
+++ b/src/modules/wef/components/footer/footer.scss
@@ -43,11 +43,13 @@ $footer-padding-hor: 80px;
 @media only screen and (max-width: 1480px) {
     .footer-container .power-by {
         justify-content: center;
+        font-size: 16px;
     }
 
     .footer-container .footer-options {
         justify-content: center;
         flex-wrap: wrap;
+        font-size: 16px;
     }
 }
 
