--- a/src/modules/wef/components/courseMetaContainer/courseMetaContainer.scss
+++ b/src/modules/wef/components/courseMetaContainer/courseMetaContainer.scss
@@ -1,7 +1,7 @@
 @import '../../assets/style/theme.scss';
 
 $coursemeta-container-margin-top: 0px;
-$meta-container-height: 1100px;
+$meta-container-height: 1050px;
 // $meta-container-sm-height: 1400px;
 $meta-lg-item-width: 1100px;
 // $meta-item-margin-bottom: 100px;
@@ -24,15 +24,6 @@ $meta-item-thumbnail-basis: 330px;
         max-width: 100vw;
         text-align: center;
         // margin-bottom: $meta-item-margin-bottom;
-
-        .item-title {
-            color: #005386;
-            letter-spacing: 0.42px;
-            font-size: 34px;
-            line-height: 80px;
-            text-align: left;
-            padding: 0 20px;
-        }
 
         .item-body {
             position: relative;
@@ -59,10 +50,20 @@ $meta-item-thumbnail-basis: 330px;
                 padding: 20px;
                 img {
                     width: 100%;
+                    height: 193px;
                     border-radius: 4px;
                     cursor: pointer;
                 }
             }
+        }
+
+        .item-title {
+            color: #005386;
+            letter-spacing: 0.42px;
+            font-size: 34px;
+            line-height: 80px;
+            text-align: left;
+            // padding: 0 20px;
         }
     }
 }
