--- a/src/modules/wef/components/getAccessContainer/getAccess.scss
+++ b/src/modules/wef/components/getAccessContainer/getAccess.scss
@@ -17,7 +17,7 @@ $content-lg-width: 1100px;
         position: relative;
         width: 1400px;
         max-width: 90vw;
-        margin: auto;
+        // margin: auto;
         padding: 40px 20px;
         text-align: center;
 
